Correção de bugs na tabela de pacientes e dialog de cadastro e implementação de busca de dados

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,13 @@
     {
       "path": "./e2e/tsconfig.json"
     }
-]
+],
+
+"extends": "../../tsconfig.json",
+"compilerOptions": {
+  "types": ["node", "jest"]
+},
+"angularCompilerOptions": {
+  "strictTemplates": true
+}
 }
